Sonar Cloud code smell clean up